# coin-news

./: .env.example  .gitignore  cl_app.py  debug_html.py  example_chroma_usage.py  main.py  pyproject.toml  requirements.txt  run_crawler.py  test_chroma_debug.py  test_chroma_final.py  test_executor_oct.py  test_executor_queries.py  test_main.http  test_news_storage.py  test_query_analyzer.py  test_scraper.py
.claude/: settings.local.json
app/agent/: entry_agent.py  executor_agent.py  query_analyzer_agent.py  query_planning_agent.py  script_agent.py  task_planning_agent.py  text_to_sql_agent.py
app/api/: bloomingbit_router.py  coinness_router.py  routers.py  test_route.py  test_router.py
app/config/: __init__.py  chroma_config.py  langsmith_config.py  mongodb_client.py  mongodb_config.py  redis_config.py
app/crawlers/: base_crawler.py  bloomingbit_crawler.py  coinness_crawler.py  coinnews_crawler.py  tokenpost_page_crawler.py
app/db/: __init__.py
app/models/: schemas.py
app/parser/: coinreaders_parser.py  digitaltoday_parser.py  general_parser.py  newsUrlLoader_parser.py  tokenpost_parser.py
app/prompt/: analysis_system_prompt.txt  executor_agent_system_prompt  query_analyzer_task_prompt  query_parser_system_prompt.txt  query_planning_agent_system_prompt  query_to_json_system_prompt  script_prompt  script_prompt.txt  system_prompt  task_planning_agent_system_prompt
app/repository/: news_repository.py  (+3 more)
scripts/: migrate_chromadb_dates.py
test/: response.txt  response_text.txt  soup.txt  test_chroma_tools.py  test_executor_oct.py  test_queries_no_date.py
(+45 files in other folders)
